--- a/styles/index.css
+++ b/styles/index.css
@@ -116,13 +116,13 @@ li {
   text-align: center;
 }
 
-.weather-forecast {
+.weather-forecast-cards {
   display: flex;
   justify-content: space-around;
-  margin-top: 30px;
+  margin-top: 15px, 0;
 }
 
-.weather-forecast-date {
+.weather-forecast-day {
   text-align: center;
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
