--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,6 @@ body {
 	top:1px;
 }
 
-
 .container-fluid {
   padding: 15px 0 15px 0;
   box-shadow: 12px 12px 2px 1px #0000002d;
@@ -52,6 +51,15 @@ body {
   border-radius: 8px;
   margin-top: 35px;
   box-shadow: 12px 12px 2px 1px #0000002d;
+}
+img {
+  border-radius: 8px;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  
+}
+.card-img-overlay {
+  border-radius: 8px;
 }
 span {
   color: grey;
@@ -82,9 +90,7 @@ card-body {
 }
 
 .weather-icon {
-  font-size: 60px;
-  text-align: center;
-
+  font-size: 20px;
 }
 
 .card-text {
@@ -145,8 +151,6 @@ li {
 .weather-forecast-temperature {
   padding: 0 10px;
 }
-
-
 
 .coder-name {
   display: block;
